--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Critique of Pure Slurp
 email: yousufshah.khan@mail.utoronto.ca
 description: Polymathing ain't easy. 
 baseurl: "/critiqueofpureslurp" # the subpath of your site, e.g. /blog
-url: "http://slurplet.github.io/Critique-of-Pure-Slurp/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "localhost:4000" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: slurplet
 github_username:  slurplet
 
